[gd_scene load_steps=2 format=3 uid="uid://dmedxutixwvoj"]

[ext_resource type="Script" uid="uid://ba4nlf65vkxq" path="res://scenes/ui/cards/active_item_line_item.gd" id="1_udjl1"]

[node name="ActiveItemLineItem" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_udjl1")

[node name="ItemNameLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Item Name"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ElipsesLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "......................................................."
text_overrun_behavior = 1

[node name="VelocityLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = " 1 / sec"
horizontal_alignment = 2
